<resources>
    <!-- Numele aplicatiei -->
    <string name="app_name">Transferly</string>

    <!-- Texte lipsa fol in layout-uri -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="action_settings">Settings</string>

    <!-- pt fragmentele de navigatie -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!-- pt logare google -->
    <string name="default_web_client_id">995314354054-qpfsojve1bg6si3sgntefqi5mm0cuvfi.apps.googleusercontent.com</string>

    <!-- pt foldere -->
    <string name="shared_folders_title">Shared Folders (0)</string>
    <string name="trash_icon_desc">Trash Icon</string>
    <string name="add_folder">Add Folder</string>


    <string name="login_welcome">Welcome back</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="google_signin">Sign in with Google</string>
    <string name="register_prompt">Don’t have an account? Register here</string>
    <string name="username_input_desc">Enter your username</string>
    <string name="password_input_desc">Enter your password</string>

    <string name="register_title">Create an account</string>
    <string name="email_hint">Email</string>
    <string name="register_button">Register</string>
    <string name="google_register">Register with Google</string>
    <string name="login_prompt">Already have an account? Login here</string>


    <string name="welcome_message">Welcome to Transferly!</string>

    <string name="profile_picture">Profile picture</string>
    <string name="edit_username">Edit Username</string>
    <string name="change_picture">Change Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="dark_mode_toggle">Dark Mode</string>

<!--    <string name="friends_title">Friends</string>-->


    <string name="your_uploads">Your Uploads</string>
    <string name="upload_intro">Start sharing your files now via link</string>
    <string name="profile_icon">Profile icon</string>



</resources>
